# projeto_aplicado_foodtruck

./: .env.dev  .env.template  .gitignore  Dockerfile  README.md  docker-compose.aws.yaml  docker-compose.prod.yaml  docker-compose.yaml  installer.py  otel-collector-config.yml  package-lock.json  package.json  prometheus.yml  pyproject.toml  requirements.txt  setup.py
.github/: ISSUE_TEMPLATE
.github/workflows/: ci.yaml  deploy.yaml  docker.yaml
backend/: .dockerignore
backend/.github/workflows/: ci.yaml
backend/projeto_aplicado/: settings.py
backend/projeto_aplicado/data/: schemas.py  utils.py
backend/projeto_aplicado/resources/category/: model.py
backend/templates/: index.html  menu.html  selected_category_new_products.html
backend/tests/: test_api_item.py
docs/: API.md  ARCHITECTURE.md  ARCHITECT_REVIEW.md  CLI.md  CLI_DEVELOPMENT.md  CLI_INDEX.md  CLI_MANUAL.md  CLI_QUICK_REFERENCE.md  CODE_QUALITY.md  DEPENDENCIES.md  INSTALL.md  README.md  ROADMAP.md  TESTS.md
docs/pt-br/: API.md  ARCHITECTURE.md  CLI.md  CLI_QUICK_REFERENCE.md  INSTALL.md  README.md
foodtruck-frontend/assets/css/: chapeiro.css  gerenciar_produtos.css  style.css
foodtruck-frontend/assets/js/: common.js
foodtruck-frontend/public/: index.html  index.js
foodtruck-frontend/public/admin/: gerenciar_produtos.html  gerenciar_produtos.js
foodtruck-frontend/public/atendente/: acompanhar_pedidos.html  acompanhar_pedidos.js  menu.html  menu.js  registrar_avaliacao.html  registrar_avaliacao.js  registrar_pedido.html  registrar_pedido.js
foodtruck-frontend/public/chapeiro/: preparar_pedidos.html  preparar_pedidos.js
migrations/: env.py
migrations/versions/: 64b5d6b9ca2c_init_migrate.py  a7f9d69492ab_adicionar_coluna_rating_na_tabela_order.py
projeto_aplicado/: app.py  models.py  pages.py  schemas.py  settings.py  utils.py
projeto_aplicado/api/: __init__.py  category.py  item.py
projeto_aplicado/auth/: security.py  token.py
projeto_aplicado/cli/: __init__.py  app.py  schemas.py
projeto_aplicado/cli/base/: __init__.py  command.py  service.py  service_factory.py
projeto_aplicado/cli/commands/: admin.py  completions.py  database.py  health.py  install.py  setup.py
projeto_aplicado/cli/ext/: __init__.py  database.py
projeto_aplicado/cli/services/: __init__.py  completions.py  database.py  health.py  installer.py  migration.py  shell.py  user.py
projeto_aplicado/cli/tests/: README.md  __init__.py  conftest.py  test_app.py  test_command_admin.py  test_command_completions.py  test_command_database.py  test_command_health.py  test_command_setup.py  test_commands.py  test_integration.py  test_services.py
projeto_aplicado/controllers/: __init__.py  category_controller.py  item_controller.py
projeto_aplicado/data/: schemas.py
projeto_aplicado/ext/cache/: redis.py
projeto_aplicado/ext/database/: db.py
projeto_aplicado/ext/supabase/: client.py  storage.py
projeto_aplicado/item/: api.py  model.py  repository.py
projeto_aplicado/item_category/: api.py  model.py  repository.py
projeto_aplicado/models/: entities.py  schemas.py
projeto_aplicado/repositories/: category_repository.py  item_repository.py
projeto_aplicado/resources/: __init__.py
projeto_aplicado/resources/category/: api.py  controller.py  model.py  repository.py  schemas.py
projeto_aplicado/resources/customer/: controller.py  model.py  repository.py  schemas.py
projeto_aplicado/resources/order/: api.py  controller.py  model.py  repository.py  schemas.py
projeto_aplicado/resources/order_item/: controller.py  model.py  repository.py  schemas.py
projeto_aplicado/resources/product/: api.py  controller.py  model.py  repository.py  schemas.py
projeto_aplicado/resources/shared/: repository.py  schemas.py
projeto_aplicado/resources/user/: controller.py  model.py  repository.py  schemas.py
projeto_aplicado/resources/users/: controller.py  model.py  repository.py  schemas.py
projeto_aplicado/scripts/: create_admin.py  init_db.py
static/: index.js  tailwind.css
templates/: base.html  categories.html  category_item_list.html  category_itens.html  category_products.html  category_products_list.html  icons.html  index.html  menu.html  menu_categories_list.html  menu_new_category_list.html  selected_category.html  selected_category_new_products.html  selected_category_products.html
templates/components/: delete_btn.html
tests/: conftest.py  test_api.py  test_api_category.py  test_api_item.py  test_api_order.py  test_api_products.py  test_api_users.py  test_create_admin.py  test_pages.py
tests/test_auth/: test_token_api.py  test_token_unit.py
